--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "domainlogger",
   "version": "1.0.0",
   "description": "Chrome Extension to Log Your Most Used Domains",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest"
   },
@@ -11,12 +11,14 @@
     "url": "git+https://github.com/faizak1/DomainLogger.git"
   },
   "author": "Faiza Khan",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/faizak1/DomainLogger/issues"
   },
   "homepage": "https://github.com/faizak1/DomainLogger#readme",
   "devDependencies": {
-    "jest": "^29.4.3"
+    "jest": "^27",
+    "jest-chrome": "^0.8.0",
+    "jest-environment-jsdom": "^27"
   }
 }
