--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         npm install
     - name: Lint
       run: |
-        npm run lint
+        npm run eslint
     - name: Test
       run: |
         npm run test
