--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,12 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true,
+        "jest": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "plugin:react/recommended"], 
+    "plugins": ["react"],
     "overrides": [
     ],
     "parserOptions": {
@@ -11,6 +14,10 @@
         "sourceType": "module"
     },
     "rules": {
-        "no-console": "warn"
+        "no-console": "warn",
+        "react/jsx-uses-react": "error",   
+        "react/jsx-uses-vars": "error",
+        "no-unused-vars": "off",
+        "no-undef": "off"
     }
 }
