--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,28 +23,28 @@ jobs:
         node-version: [14.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: package-lock.json
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          cache-dependency-path: package-lock.json
 
-    - name: Install dependencies
-      run: |
-        npm install
-        
-    - name: Lint
-      run: |
-        npm run eslint
-        
-    - name: Test
-      run: |
-        npm run test -- --coverage
-        
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Install dependencies
+        run: |
+          npm install
+
+      - name: Lint
+        run: |
+          npm run eslint
+
+      - name: Test
+        run: |
+          npm run test -- --coverage
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
