--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "no-unused-vars": "off",
-    "no-undef": "off"
+    "no-undef": "off",
+    "no-redeclare": "off"
   }
 }
