--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "domainlogger",
-  "version": "0.1.1",
+  "name": "domain-logger-delete-tabs-by-domain",
+  "version": "0.1.2",
   "description": "Chrome Extension to Log Your Most Used Domains",
   "main": "src/index.js",
   "scripts": {
