--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "jest": "^27",
     "jest-chrome": "^0.8.0",
     "jest-environment-jsdom": "^27.5.1"
+  },
+  "dependencies": {
+    "jsdoc": "^4.0.2"
   }
 }
