--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "prettier": "prettier --config .prettierrc --write .",
     "eslint": "eslint .",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "build-docs": "npx jsdoc src/index.js"
   },
   "repository": {
     "type": "git",
